# workbuddy-bench

./: .env.example  .gitignore  CNAME  LICENSE  README.md  README.zh.md  app_v2.js  code.html  data.js  index.html  lang.js  office.html  overview.html  pyproject.toml  roster.js  security.html  site.js  skills.html  subset-lb.js  wbds-chrome.css  wbds-detail.css  web.html
.agents/skills/wbbench-report-skills/: SKILL.md
.agents/skills/wbbench-run-setup/: SKILL.md
configs/: README.md  README.zh.md
configs/bench/: _default.yaml  wb-bench-code-v1.0.yaml  wb-bench-office-v1.0.yaml  wb-bench-sec-v1.0.yaml  wb-bench-web-v1.0.yaml
configs/harnesses/: HARNESS_AUTHORING.md  _template.harness.yaml
configs/harnesses/claude-code/: CONFIG.md  _defaults.yaml
configs/harnesses/codebuddy-code/: CONFIG.md  _defaults.yaml
configs/jobs/: _reference.yaml  _template.job.yaml
configs/models/: _template.model.yaml
datasets/: README.md
scripts/: run-jobs.sh  run.sh
scripts/dataset/: fetch-dataset.sh
scripts/harness/: build-harness-mounts.sh
scripts/judge/: run-judge.sh
scripts/proxy/: proxy-env.sh  proxy-shared.sh
src/workbuddy_bench/agents/: _agent_user.py  _usage.py  cbc_agent.py  cc_agent.py
src/workbuddy_bench/judge/: __init__.py  registry.py
src/workbuddy_bench/proxy/: README.md  __init__.py  __main__.py  config.py  main.py  pipeline.py  sender.py
src/workbuddy_bench/runner/: bench_config.py  config_loaders.py  docker_environment.py  harness_adapters.py  harness_backends.py  judge_routing.py  model_endpoints.py  model_params.py  prepare_job.py  (+7 more)
(+73 files in other folders)
