[project]
name = "workbuddy-bench"
version = "0.1.0"
description = "Code Agent evaluation bench, powered by Harbor"
license = { file = "LICENSE" }
requires-python = ">=3.12"
# Harbor is the orchestration runtime, reused as-is from upstream and pinned
# by tag under [tool.uv.sources] below.
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # proxy server (Anthropic<->OpenAI protocol-conversion proxy)
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "harbor",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
]

# Harbor is reused directly from upstream, pinned to a release tag so the
# bench does not depend on a sibling editable checkout. Bump the tag to upgrade.
[tool.uv.sources]
harbor = { git = "https://github.com/harbor-framework/harbor.git", tag = "v0.18.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workbuddy_bench"]
